<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="18dp"
    tools:context="com.cognition.app.mulika.MainActivity">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:padding="10dp"
        android:text="@string/register_header"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/colorTxtBackground"
        android:hint="@string/username"
        android:padding="10dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/header"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/colorTxtBackground"
        android:hint="@string/phone"
        android:inputType="phone"
        android:padding="10dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/username" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/colorTxtBackground"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/phone" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnNavR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/already_have_an_account_login"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/btnRegister" />
</android.support.constraint.ConstraintLayout>
