<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="18dp"
    tools:context="com.cognition.app.mulika.Login">
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_header"
        android:textSize="15sp"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:padding="10dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"/>
    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/colorTxtBackground"
        android:hint="@string/username"
        android:padding="10dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/colorTxtBackground"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/username" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login_btn_text"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/register_prompt"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/btnLogin" />
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"/>
</android.support.constraint.ConstraintLayout>
